--- a/flipkart-typescrit-project/src/Components/CartPage/Cart/index.scss
+++ b/flipkart-typescrit-project/src/Components/CartPage/Cart/index.scss
@@ -1,13 +1,12 @@
+@import "../../../SCSSFile/SCSSFunctions/index.scss";
+
 .cart-main{
     width: 80rem;
     margin: 0 auto;
-    display: flex;
-    gap: 1rem;
+   @include displayFlexProperty(start, start, 1rem);
 
     &-left{
-        width: 50rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
+        width: 56rem;
+       @include displayFlexColumnProperty(start, start, 1rem)
     }
 }
