--- a/flipkart-typescrit-project/src/Components/CartPage/CartPriceDetails/index.scss
+++ b/flipkart-typescrit-project/src/Components/CartPage/CartPriceDetails/index.scss
@@ -1,43 +1,44 @@
+@import "../../../SCSSFile/ColorVariable/index.scss";
+@import "../../../SCSSFile/SCSSFunctions/index.scss";
+
 .cart-price {
-  background-color: white;
+  background-color: $whiteColor;
   font-size: 1rem;
   width: 23rem;
   height: fit-content;
   padding-bottom: 1rem;
   border-radius: 0.2rem;
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,.2);
+  box-shadow: 0 1px 1px 0 $boxShadowBlack;
 
   &-details-heading {
-    color: #878787;
+    color: $gray;
     padding: 1rem;
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid $lightGray94;
   }
   &-container {
     padding: 1.3rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    @include displayFlexColumnProperty(start, start, 1rem);
+   
   }
   &-single-detials {
-    display: flex;
-    justify-content: space-between;
+    @include displayFlexProperty(start, space-between, 0);
+   width: 100%;
   }
-  &-total-amout{
-     padding: 1.3rem;
+  &-total-amout {
+    padding: 1.3rem;
+    width: 100%;
   }
   &-total {
     padding: 1.3rem 0;
-    border-bottom: 1px dashed #e0e0e0;
-    border-top: 1px dashed #e0e0e0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    border-bottom: 1px dashed $lightGray88;
+    border-top: 1px dashed $lightGray88;
+    @include displayFlexProperty(start, space-between, 0);
   }
-  & h6{
+  & h6 {
     font-size: 1rem;
   }
-  &-saves{
+  &-saves {
     padding: 0 1.3rem;
-    color: #388e3c;
+    color: $mediumGreeen;
   }
 }
