--- a/flipkart-typescrit-project/src/SCSSFile/ColorVariable/index.scss
+++ b/flipkart-typescrit-project/src/SCSSFile/ColorVariable/index.scss
@@ -1,6 +1,7 @@
 $whiteColor: white;
 $whitesmoke: whitesmoke;
 $blackColor: black;
+$mediumBlack : #212121;
 $redColor: red;
 $blueColor: #2874f0;
 $darkwhite: rgb(233, 231, 231);
