--- a/flipkart-typescrit-project/src/Components/CartPage/Address/index.scss
+++ b/flipkart-typescrit-project/src/Components/CartPage/Address/index.scss
@@ -33,10 +33,8 @@
   }
 
   &-change-button {
-    height: 2.2rem;
-    padding: 0 0.5rem;
+    @include buttonStyle(2.2rem, none, 0 0.5rem , none, $whiteColor, $blueColor );
     border: 1px solid $lightGray88;
-    color: $blueColor;
-    background-color: $whiteColor;
+    
   }
 }
