--- a/flipkart-typescrit-project/src/Components/CartPage/CartPriceDetails/index.scss
+++ b/flipkart-typescrit-project/src/Components/CartPage/CartPriceDetails/index.scss
@@ -4,8 +4,7 @@
 .cart-price {
   background-color: $whiteColor;
   font-size: 1rem;
-  width: 23rem;
-  height: fit-content;
+  @include heightWidthProperty(fit-content, 23rem);
   padding-bottom: 1rem;
   border-radius: 0.2rem;
   box-shadow: 0 1px 1px 0 $boxShadowBlack;
