--- a/flipkart-typescrit-project/src/Components/HomePage/ProductCount/index.scss
+++ b/flipkart-typescrit-project/src/Components/HomePage/ProductCount/index.scss
@@ -16,7 +16,7 @@
 
 .number {
   text-align: center;
-  color: rgb(33, 33, 33);
+  color: $mediumBlack;
   border: 1px solid $borderLightGray;
   border-radius: 0.6rem;
   width: 4rem;
