--- a/flipkart-typescrit-project/src/App.scss
+++ b/flipkart-typescrit-project/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');
+@import "./SCSSFile/ColorVariable/index.scss";
 @import './SCSSFile/SCSSFunctions/index.scss';
 
 *{
@@ -16,19 +17,26 @@ body{
 .app-main{
   @include displayFlexColumnProperty(center, start, 0.6rem);  
 }
+
 button {
   position: relative;
   outline: none;
   border: none;
-}
-button:hover,button:active{
+
+
+&:hover, &:active{
   opacity: 1.3;
   cursor: pointer;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
 }
+}
+
 img{
   object-fit: contain;
   margin: auto ;
 }
+
 input{
   outline: none;
 }
