--- a/flipkart-typescrit-project/src/ComponentsPages/SingleViewPage/SingleView/index.scss
+++ b/flipkart-typescrit-project/src/ComponentsPages/SingleViewPage/SingleView/index.scss
@@ -11,7 +11,6 @@
   text-transform: capitalize;
   color: white;
   @include displayFlexProperty(center, center, 0.5rem);
-
 }
 
 .singleview {
@@ -31,11 +30,34 @@
       height: 33rem;
     }
   }
+  & .discount-price-container {
+    & .₹ {
+      font-size: 1.3rem;
+    }
+    & h4 {
+      font-size: 1.4rem;
+    }
+  }
+  & .original-price-container {
+    & .₹ {
+      font-size: 1.1rem;
+    }
+    & p {
+      font-size: 1rem;
+    }
+  }
+
+  & .single-price-container {
+    @include displayFlexProperty(end, start, 0.6rem);
+  }
+
+  & .discount-percentage {
+    font-size: 0.9rem;
+  }
 
   &-right {
     padding: 2rem;
-    @include displayFlexColumnProperty(start, start, 1.3rem)
-
+    @include displayFlexColumnProperty(start, start, 1.3rem);
   }
 
   & .button-container {
@@ -46,17 +68,16 @@
     @include fullPageButton($orangPeel);
   }
 
-& .buynow-button {
+  & .buynow-button {
     @include fullPageButton($darkOrange);
-}
+  }
 
   & .rating-counts {
     @include displayFlexProperty(center, start, 0.5rem);
     flex-wrap: wrap;
 
     & h5 {
-        white-space: nowrap;
-        
+      white-space: nowrap;
     }
   }
 
@@ -69,33 +90,28 @@
     font-weight: 600;
   }
 
-  & .single-rating-number{
+  & .single-rating-number {
     @include displayFlexProperty(center, center, 0.3rem);
-  @include buttonStyle(
-    2.1rem,
-    fit-content,
-    0.2rem 1rem,
-    0.8rem,
-    $greenColor,
-    $whiteColor
-  );
-  font-size: 1.4rem;
+    @include buttonStyle(
+      2.1rem,
+      fit-content,
+      0.2rem 1rem,
+      0.8rem,
+      $greenColor,
+      $whiteColor
+    );
+    font-size: 1.4rem;
   }
 
   & .assured-img {
     @include imgProperty(8rem, 3, none);
-}
+  }
 
   & .single-price-container {
     font-size: 1.5rem;
-
-    & .₹{
-        font-size: 1.4rem;
-    }
   }
 
-  & .single-product-about{
+  & .single-product-about {
     @include displayFlexColumnProperty(start, start, 0.5rem);
   }
-
 }
