--- a/flipkart-typescrit-project/src/SCSSFile/ColorVariable/index.scss
+++ b/flipkart-typescrit-project/src/SCSSFile/ColorVariable/index.scss
@@ -17,7 +17,9 @@ $mediumGreeen: #388f3c;
 $boxShadowBlack: rgba(0, 0, 0, 0.2);
 $lightPink: lightpink;
 $gray62: #9e9e9e;
+$lightBlue : rgb(235, 247, 251);
 $darkGray : #717070;
+$lightBlack : #454444;
 $goldenPoppy: #ffc200;
 $lightWhite: rgb(236, 248, 252);
 $orangPeel: rgb(255, 157, 0);
