--- a/flipkart-typescrit-project/src/ComponentsPages/HomePage/HomeHeader/index.scss
+++ b/flipkart-typescrit-project/src/ComponentsPages/HomePage/HomeHeader/index.scss
@@ -86,6 +86,7 @@
   border-radius: 0.5rem;
   padding: 0.8rem;
   cursor: pointer;
+  border: 1px solid $whiteColor;
 
   &:hover{
     border: 1px solid $borderLightGray;
