--- a/flipkart-typescrit-project/src/SCSSFile/ColorVariable/index.scss
+++ b/flipkart-typescrit-project/src/SCSSFile/ColorVariable/index.scss
@@ -7,6 +7,7 @@ $blueColor: #2874f0;
 $darkwhite: rgb(233, 231, 231);
 $darkOrange: #fb641b;
 $lightGray: rgb(212, 212, 212);
+$darkWhite :rgb(237, 235, 235);
 $mediumGray: rgb(160, 160, 160);
 $gray: rgb(135, 135, 135);
 $greenColor: #008000;
